[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sniper.gd" type="Script" id=2]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 198.799

[node name="Enemy" instance=ExtResource( 1 )]

script = ExtResource( 2 )
Bullet = ExtResource( 3 )

[node name="AnimatedSprite" parent="." index="3"]

frame = 5

[node name="ShootRange" type="Area2D" parent="." index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootRange" index="0"]

shape = SubResource( 1 )

[connection signal="body_entered" from="ShootRange" to="." method="_on_ShootRange_body_entered"]

[connection signal="body_exited" from="ShootRange" to="." method="_on_ShootRange_body_exited"]


